# mal

./: .gitignore  .mal_history  Cargo.toml  bacon.toml  readme.md  run  runtest.py
helper/: Cargo.toml
helper/src/: lib.rs
src/: env.rs  lib.rs  main.rs  printer.rs  reader.rs  step0_repl.rs  step1_read_print.rs  step1_repl.rs  step2_eval.rs  step3_env.rs  test_builder.rs  types.rs
step0/: Cargo.toml
step0/src/: lib.rs  main.rs  readline.rs  test.rs  tests.rs
step1/: Cargo.toml
step1/src/: error.rs  lib.rs  main.rs  tests.rs  token.rs
step2/: Cargo.toml
step2/src/: env.rs  error.rs  eval.rs  main.rs  printer.rs  reader.rs  tests.rs
step3/: Cargo.toml
step3/src/: env.rs  error.rs  main.rs  reader.rs  tests.rs  token.rs
step4/: Cargo.toml
step4/src/: env.rs  eval.rs  funcs.rs  printer.rs  tests.rs
