[package]
name = "mal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.5"
lazy_static = "1.4.0"
regex = "1.7.0"
rustyline = "10.0.0"


[[bin]]
name = "0"
path = "src/step0_repl.rs"

[[bin]]
name = "1"
path = "src/step1_read_print.rs"

[[bin]]
name = "2"
path = "src/step2_eval.rs"

[[bin]]
name = "3"
path = "src/step3_env.rs"
